--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         <meta name="theme-color" content="#563d7c"> -->
         
         <!--CSS-->
-        <link href="/style.css" rel="stylesheet"> 
+        <link href="style.css" rel="stylesheet"> 
     </head>
 
     
 
     <body>
         <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-            <img id="imgProfitNavbar" src="/img/Profit-mais.png" class="navbar-brand col-sm-3 col-md-2 mr-0">
+            <img id="imgProfitNavbar" src="img/Profit-mais.png" class="navbar-brand col-sm-3 col-md-2 mr-0">
             <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
             <ul class="navbar-nav px-3">
                 <li class="nav-item text-nowrap">
@@ -697,6 +697,6 @@
         <script>window.jQuery || document.write('<script src="/docs/4.4/assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="/docs/4.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
-        <script src="/script.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
